--- a/public/assets/css/screen.css
+++ b/public/assets/css/screen.css
@@ -13,6 +13,7 @@ Global stuff
 
 body {
     font-family: 'Muli', sans-serif;
+    overflow-x: hidden;
 }
 
 /**
@@ -39,6 +40,9 @@ header {
 header h1 {
     color: #00a500;
     padding-left: 64px;
+    background: -webkit-linear-gradient(#00c500, #007a00);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 @media (max-width: 550px) {
@@ -48,16 +52,21 @@ header h1 {
 }
 
 header:not(.mobile) h1 {
-    background: -webkit-linear-gradient(#00c500, #007a00);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
 }
 
 header.mobile {
-    background-image: url("../media/sano_white.png");
-    background-color: #00a500;
+    background-image: url("../media/sano_green.png");
     background-size: 32px;
     background-position-x: 8px;
+    background-position-y: 11px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 100;
+    border-bottom: 1px solid #00a500;
+    height: 50px;
 }
 
 header.mobile h1 {
@@ -65,6 +74,98 @@ header.mobile h1 {
     padding-bottom: 8px;
     color: white;
     font-size: 3.0rem;
+}
+
+h2 {
+    color: #007A00;
+    margin-bottom: 8px;
+}
+
+#chat {
+    margin-bottom: 40px;
+}
+
+#chat-input-mobile {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    border-radius: 0;
+}
+
+#chat ul {
+    padding-left: 16px;
+    padding-right: 16px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+#chat a {
+    color: #0680ff;
+    font-weight: normal;
+}
+
+#chat a:hover {
+    color: #0668d0;
+}
+
+#chat ul li.self a {
+    color: white;
+}
+
+#chat ul li.self a:hover {
+    color: white;
+}
+
+#chat ul li {
+    background-color: #ebebeb;
+    margin-bottom: 8px;
+    padding: 4px;
+    list-style-type: none;
+    border-radius: 8px;
+    position: relative;
+}
+
+#chat ul li.self {
+    background-color: #00a500;
+    color: white;
+}
+
+#chat ul li.server {
+    background-color: white;
+    font-weight: bold;
+    color: #007A00;
+}
+
+#chat ul li.self:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: 0;
+    height: 0;
+    border: 16px solid transparent;
+    border-left-color: #00a500;
+    border-right: 0;
+    border-top: 0;
+    margin-top: -10px;
+    margin-right: -16px;
+}
+
+#chat ul li.remote:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 0;
+    height: 0;
+    border: 16px solid transparent;
+    border-right-color: #ebebeb;
+    border-left: 0;
+    border-top: 0;
+    margin-top: -10px;
+    margin-left: -16px;
 }
 
 @media (min-width: 400px) {
