--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/css/skeleton.css">
-    <link rel="stylesheet" href="assets/css/screen.css">
-    <title>Title</title>
-</head>
+<% include partials/head.ejs %>
 <body>
 
 <header class="mobile">
@@ -17,6 +10,11 @@
 <div class="container">
     <header>
         <h1>SANO</h1>
+        <ul>
+            <% if (typeof(links) !== 'undefined') links.forEach(function(item) {%>
+            <li><a href="#"><%=item%></a></li>
+            <%});%>
+        </ul>
     </header>
 
     <div id="chat">
@@ -40,6 +38,6 @@
 
 <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
-<script type="text/javascript" src="assets/js/script.js"></script>
+<!--<script type="text/javascript" src="assets/js/script.js"></script>-->
 </body>
 </html>
