--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,36 +8,26 @@
 </header>
 
 <div class="container">
-    <header>
-        <h1>SANO</h1>
-        <ul>
-            <% if (typeof(links) !== 'undefined') links.forEach(function(item) {%>
-            <li><a href="#"><%=item%></a></li>
-            <%});%>
-        </ul>
-    </header>
+    <% include partials/header.ejs %>
 
-    <div id="chat">
-        <h2>Chat</h2>
-        <ul>
-            <li class="server">Some generic info and <a href="#">a link</a></li>
-            <li class="remote">Blegh</li>
-            <li class="remote">Blegh</li>
-            <li class="remote">Blegh</li>
-            <li class="remote">Blegh</li>
-            <li class="remote">Blegh</li>
-            <li class="remote">Blegh</li>
-            <li class="remote">Blegh</li>
-            <li class="remote">Blegh</li>
+    <form action="/login.do" method="post">
+        <fieldset>
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" required/>
+        </fieldset>
+        <fieldset>
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" required/>
+        </fieldset>
 
-        </ul>
-    </div>
+        <input type="submit" class="button-primary" value="Continue"/>
+    </form>
 </div>
 
 <input id="chat-input-mobile" type="text" placeholder="Enter a message"/>
 
 <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
-<!--<script type="text/javascript" src="assets/js/script.js"></script>-->
+<!--<script type="text/javascript" src="assetschat.jst.js"></script>-->
 </body>
 </html>
