--- a/public/assets/css/screen.css
+++ b/public/assets/css/screen.css
@@ -66,10 +66,6 @@ header:not(.mobile) h1 {
 }
 
 header.mobile {
-    background-image: url("../media/sano_green.png");
-    background-size: 32px;
-    background-position-x: 8px;
-    background-position-y: 11px;
     position: fixed;
     top: 0;
     left: 0;
@@ -78,13 +74,16 @@ header.mobile {
     z-index: 100;
     border-bottom: 1px solid #00a500;
     height: 50px;
+    padding-bottom: 8px;
+    padding-top: 8px;
+    padding-left: 8px;
 }
 
 header.mobile h1 {
     padding-top: 8px;
     padding-bottom: 8px;
-    color: white;
     font-size: 3.0rem;
+    padding-left: 56px;
 }
 
 h2 {
@@ -179,6 +178,79 @@ h2 {
     margin-left: -16px;
 }
 
+#dispatch-button, #dispatch-button .bar {
+    transition: 2s border-radius ease-in-out;
+}
+
+#dispatch-button.clickable:hover {
+    border-radius: 0;
+}
+
+#dispatch-button .bar {
+    content: "";
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    background-color: #00a500;
+    top: 0;
+    left: -1px;
+}
+
+#dispatch-button {
+    background-color: #ebebeb;
+    text-decoration: none;
+    height: 8px;
+    display: block;
+    text-align: center;
+    font-size: 1.5rem;
+    position: relative;
+}
+
+#dispatch-button.escalated {
+    border: 4px solid #f5c12a;
+}
+
+#dispatch-button.escalated .bar {
+    background-color: #f5c12a;
+}
+
+#dispatch-button.notice {
+    border: 4px solid #0680ff;
+}
+
+#dispatch-button.notice .bar {
+    background-color: #0680ff;
+}
+
+#dispatch-button, #dispatch-status, #dispatch-available {
+    max-width: 300px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#dispatch-status, #dispatch-available {
+    display: block;
+}
+
+.dot-status {
+    width: 8px;
+    height: 8px;
+    border-radius: 8px;
+    background-color: #f5c12a;
+    display: inline-block;
+    margin-right: 8px;
+    margin-bottom: 2px;
+}
+
+.dot-status.offline {
+    background-color: gray;
+}
+
+.dot-status.online {
+    background-color: #00C500;
+}
+
 @media (min-width: 400px) {
     header.mobile {
         display: none;
@@ -203,6 +275,6 @@ h2 {
     }
 
     body {
-        padding-top: 0;
+        padding-top: 78px;
     }
 }
