--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -31,7 +31,7 @@
 
 <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
-<script type="text/javascript" src="assets/js/socket.io.js"></script>
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="assets/js/chat.js"></script>
 </body>
 </html>
