Added timer/status/online count

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,14 +22,15 @@
         </div>
 
 
-        <span id="dispatch-status"></span>
-        <span id="dispatch-progress">
-        <span class="bar"></span>
-    </span>
-        <span id="dispatch-available">
-        <span class="dot-status"></span>
-        <span class="content">Please wait...</span>
-    </span>
+        <div id="dispatch-status"></div>
+        <div id="dispatch-progress">
+            <div class="bar"></div>
+        </div>
+        <div id="dispatch-available">
+            <div class="dot-status"></div>
+            <span class="content">Please wait...</span>
+        </div>
+
         <a href="#" id="dispatch-button" style="display: none">
             Go
         </a>
