--- a/public/assets/css/screen.css
+++ b/public/assets/css/screen.css
@@ -184,7 +184,7 @@ h2 {
 
 #dispatch-progress .bar {
     content: "";
-    width: 50%;
+    width: 100%;
     height: 100%;
     position: absolute;
     background-color: #00a500;
@@ -206,6 +206,7 @@ h2 {
     margin-right: auto;
     font-size: 3rem;
     font-weight: bold;
+    transition: background-color 0.5s ease-in-out;
 }
 
 #dispatch-button:hover {
@@ -280,7 +281,6 @@ h2 {
     border-radius: 8px;
     background-color: #f5c12a;
     display: inline-block;
-    margin-right: 8px;
     margin-bottom: 2px;
 }
 
