--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,8 +24,8 @@
     </form>
 </div>
 
-<script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="/assets/js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="/assets/js/jquery-ui.min.js"></script>
 <!--<script type="text/javascript" src="assetschat.jst.js"></script>-->
 </body>
 </html>
