Mobile viewport fix

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,5 +4,6 @@
     <link rel="stylesheet" href="/assets/css/normalize.css">
     <link rel="stylesheet" href="/assets/css/skeleton.css">
     <link rel="stylesheet" href="/assets/css/screen.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%=title%></title>
 </head>
